--- a/style.css
+++ b/style.css
@@ -121,6 +121,10 @@ body {
     color: var(--brown);
 }
 
+#cb4 {
+    padding-top: 16px;
+}
+
 .control-box-name {
     padding-bottom: 10px;
     
@@ -532,6 +536,24 @@ button:active::before {
     padding-top: 15px; 
 }
 
+.copyright {
+    padding-top: 20px;
+}
+
+.copyright p {
+    padding: 0px;
+    margin: 0px;
+    font-size: 14px;
+    font-weight: 300;
+}
+
+#github {
+    display: inline;
+    pointer-events: auto;
+    width: 18px;
+    
+}
+
 @media (hover: hover) and (pointer: fine) {
     /* No hover styles on touch screen */
     .slider:hover {
@@ -576,6 +598,9 @@ button:active::before {
         100% { box-shadow: inset 0 0 0 2000px var(--pink1); }
     }
     
+    #github:hover {
+        filter: invert(56%) sepia(100%) saturate(731%) hue-rotate(8deg) brightness(103%) contrast(91%);
+    }
 }
 
 @media(max-width: 1220px) {
@@ -658,6 +683,7 @@ button:active::before {
 
     .panel.controls {
         align-items: flex-start;
+        align-content: flex-start;
         flex-direction: row;
         flex-wrap: wrap;
     }
@@ -671,6 +697,10 @@ button:active::before {
         min-width: 250px;
     }
     
+    #cb4 {
+        padding: 12px;
+    }
+
     .pixel-grid {
         width: 600px;
         height: 600px;
@@ -750,6 +780,10 @@ button:active::before {
     .pixel-grid {
         width: 380px;
         height: 380px;
+    }
+
+    #cb4 {
+        padding-top: 16px;
     }
 }
 
